Improve and update to latest owd
Rename desktop modules
Rework dock
Pass content to NoticeFullscreenExit slot
Remove defineProps and defineEmits imports
Remove index.scss from variants folder
Add $owd-desktop-background and some other style
Other improvements

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -11,3 +11,5 @@
 
 // overwrite vuetify styles
 @import 'partials/vuetify/VInput/styles';
+@import 'partials/vuetify/VCard/styles';
+@import 'partials/vuetify/VBtn/styles';
