--- a/assets/styles/partials/owd/Window/window-button.scss
+++ b/assets/styles/partials/owd/Window/window-button.scss
@@ -13,6 +13,10 @@
       min-width: 26px;
       height: 26px;
 
+      &:before {
+        box-shadow: none !important;
+      }
+
       i {
         font-size: 14px;
       }
