--- a/assets/styles/partials/owd/Window/window.scss
+++ b/assets/styles/partials/owd/Window/window.scss
@@ -14,11 +14,15 @@
     }
 
     &__btn-group {
+      a, button:not(.v-btn--essential) {
+        margin-top: -2px;
+      }
+
       &--prepend {
         left: 7px;
 
         a, button {
-          margin-right: 4px;
+          margin-right: 5px;
         }
       }
 
@@ -26,7 +30,7 @@
         right: 7px;
 
         a, button {
-          margin-left: 4px;
+          margin-left: 5px;
         }
       }
     }
