--- a/variants/adwaita-dark/variables.scss
+++ b/variants/adwaita-dark/variables.scss
@@ -92,9 +92,9 @@ $owd-window-button-border-color: #1b1b1b #1b1b1b #151515 #1b1b1b;
 $owd-window-button-border-color-hover: #1b1b1b #1b1b1b #070707 #1b1b1b;
 $owd-window-button-border-color-active: #1b1b1b;
 $owd-window-button-border-color-inactive: #202020;
-$owd-window-button-icon-color: #b4b4b4;
-$owd-window-button-icon-color-hover: #919190;
-$owd-window-button-icon-color-active: #919190;
+$owd-window-button-icon-color: white;
+$owd-window-button-icon-color-hover: $owd-window-button-icon-color;
+$owd-window-button-icon-color-active: $owd-window-button-icon-color;
 $owd-window-button-icon-color-inactive: #919190;
 
 // window buttons primary
