--- a/assets/styles/partials/owd/Window/window.scss
+++ b/assets/styles/partials/owd/Window/window.scss
@@ -14,7 +14,7 @@
     }
 
     &__btn-group {
-      a, button:not(.v-btn--essential) {
+      a, button:not(.owd-btn--essential) {
         margin-top: -2px;
       }
 
