Convert scss variables to css4 variables

--- a/assets/styles/partials/owd/Scrollbar/scrollbar.scss
+++ b/assets/styles/partials/owd/Scrollbar/scrollbar.scss
@@ -8,6 +8,6 @@
     height: auto;
     padding: 4px;
     margin: 4px;
-    background: $owd-scrollbar;
+    background: var(--owd-scrollbar);
   }
 }
