--- a/assets/styles/partials/vuetify/VInput/styles.scss
+++ b/assets/styles/partials/vuetify/VInput/styles.scss
@@ -1,26 +1,26 @@
 .owd-desktop {
   .v-input:not(.preserve-material) {
-    border: $owd-window-input-border;
-    border-color: $owd-window-input-border-color;
-    border-radius: $owd-window-input-border-radius;
-    background-color: $owd-window-input-background;
-    box-shadow: $owd-window-input-box-shadow;
-    color: $owd-window-input-color;
-    height: $owd-window-input-height;
-    padding: $owd-window-input-padding;
+    border: var(--owd-window-input-border);
+    border-color: var(--owd-window-input-border-color);
+    border-radius: var(--owd-window-input-border-radius);
+    background-color: var(--owd-window-input-background);
+    box-shadow: var(--owd-window-input-box-shadow);
+    color: var(--owd-window-input-color);
+    height: var(--owd-window-input-height);
+    padding: var(--owd-window-input-padding);
 
     &:hover {
-      border-color: $owd-window-input-border-color-hover;
-      background-color: $owd-window-input-background-hover;
-      box-shadow: $owd-window-input-box-shadow-hover;
-      color: $owd-window-input-color-hover;
+      border-color: var(--owd-window-input-border-color-hover);
+      background-color: var(--owd-window-input-background-hover);
+      box-shadow: var(--owd-window-input-box-shadow-hover);
+      color: var(--owd-window-input-color-hover);
     }
 
     &:active {
-      border-color: $owd-window-input-border-color-active;
-      background-color: $owd-window-input-background-active;
-      box-shadow: $owd-window-input-box-shadow-active;
-      color: $owd-window-input-color-active;
+      border-color: var(--owd-window-input-border-color-active);
+      background-color: var(--owd-window-input-background-active);
+      box-shadow: var(--owd-window-input-box-shadow-active);
+      color: var(--owd-window-input-color-active);
     }
   }
 }
