--- a/app/assets/styles/variants/adwaita-dark/variables.scss
+++ b/app/assets/styles/variants/adwaita-dark/variables.scss
@@ -1,13 +1,13 @@
 :root {
   --owd-background-color: #161616;
-  --owd-color: white;
+  --p-color: white;
 
-  --owd-gnome-adwaita-dark-bg-color: #323232;
-  --owd-gnome-adwaita-dark-fg-color: #dcdcdc;
-  --owd-gnome-adwaita-dark-primary-color: #3584e4;
-  --owd-gnome-adwaita-dark-secondary-color: #4a4a4a;
-  --owd-gnome-adwaita-dark-accent-color: #8ec07c;
-  --owd-gnome-adwaita-dark-error-color: #cc6666;
-  --owd-gnome-adwaita-dark-warning-color: #d7ba7d;
-  --owd-gnome-adwaita-dark-info-color: #8fbcbb;
+  --p-adwaita-dark-bg-color: #323232;
+  --p-adwaita-dark-fg-color: #dcdcdc;
+  --p-adwaita-dark-primary-color: #3584e4;
+  --p-adwaita-dark-secondary-color: #4a4a4a;
+  --p-adwaita-dark-accent-color: #8ec07c;
+  --p-adwaita-dark-error-color: #cc6666;
+  --p-adwaita-dark-warning-color: #d7ba7d;
+  --p-adwaita-dark-info-color: #8fbcbb;
 }
