--- a/app/assets/styles/partials/slider.scss
+++ b/app/assets/styles/partials/slider.scss
@@ -1,14 +1,14 @@
 :root {
-  --owd-gnome-slider-handle-width: 16px;
-  --owd-gnome-slider-handle-height: 16px;
-  --owd-gnome-slider-range-background: var(--owd-gnome-adwaita-dark-primary-color);
-  --owd-gnome-slider-handle-background: #eee;
-  --owd-gnome-slider-handle-hover-background: white;
-  --owd-gnome-slider-handle-border-radius: 8px;
+  --p-slider-handle-width: 16px;
+  --p-slider-handle-height: 16px;
+  --p-slider-range-background: var(--p-adwaita-dark-primary-color);
+  --p-slider-handle-background: #eee;
+  --p-slider-handle-hover-background: white;
+  --p-slider-handle-border-radius: 8px;
 
-  --owd-gnome-slider-track-background: #555;
-  --owd-gnome-slider-track-size: 4px;
-  --owd-gnome-slider-track-border-radius: 4px;
+  --p-slider-track-background: #555;
+  --p-slider-track-size: 4px;
+  --p-slider-track-border-radius: 4px;
 }
 
 .p-slider {
@@ -19,6 +19,6 @@
   }
 
   &--icon {
-    --owd-gnome-button-lg-padding-x: 10px;
+    --p-button-lg-padding-x: 10px;
   }
 }
