--- a/app/assets/styles/partials/button.scss
+++ b/app/assets/styles/partials/button.scss
@@ -6,7 +6,7 @@
   --p-button-padding-y: 8px;
   --p-button-lg-padding-x: 14px;
   --p-button-lg-padding-y: 10px;
-  --p-button-border-radius: var(--p-input-border-radius);
+  --p-button-border-radius: var(--owd-input-border-radius);
   --p-button-rounded-border-radius: 32px;
   --p-button-gap: 8px;
 }
